# hoozz_play_esp32c3_button_led

./: .gitmodules  README.md
.github/workflows/: esp32.yml
MCU/: CMakeLists.txt
MCU/main/: CMakeLists.txt  main.cpp
PCB/: ESP32C3_BUTTON_LED_MCU_Sheet.SchDoc  ESP32C3_BUTTON_LED_PCB.PcbDoc  ESP32C3_BUTTON_LED_PCB_Project.PrjPCB  ESP32C3_BUTTON_LED_WS2812B_Sheet.SchDoc
